<resources>
    <string name="app_name">Candy Race</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="loginButton">Login</string>
    <string name="loginPassword">Password</string>
    <string name="loginEmail">Email</string>
    <string name="loginTextView">Candy Wild</string>
    <string name="connected" />
    <string name="error_login_fields" />
    <string name="auth_fail" />
    <string name="registrationTextView">Candy Race</string>
    <string name="registrationEmail">Email</string>
    <string name="registrationPassword">Password</string>
    <string name="registrationButton">Send</string>
    <string name="supprimer_mon_compte">Delete account</string>
    <string name="valider">Send</string>
    <string name="choisir_son_pseudo">Choose pseudo</string>
    <string name="take_picture" />
    <string name="choose_picture" />
    <string name="cancel" />
    <string name="add_pic" />
    <string name="suppression_compte" />
    <string name="oui" />

    <string name="name_deals_list">Name</string>
    <string name="race">Race</string>
    <string name="candy">Candy</string>
    <string name="unableCurrentLocation" />

    <string name="title_activity_main">Candy Race</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unable_current_location">position actuelle invalide</string>
    <string name="title_activity_maps">Map</string>
    <string name="share_body" />
    <string name="title_share" />
    <string name="share_bodybis" />
    <string name="titleShare" />

</resources>
